# porf

./: README.md  pyproject.toml
docs/: tech_report.md
examples/: basic_research.py  deep_research.py  local_model.py  multilingual.py
porf/: __init__.py  cli.py  core.py  encoder.py  mind_map.py  prompts.py  search.py  types.py
